Discussed how to pass data from child to parent (lifiting the state up)

--- a/react-course/src/App.css
+++ b/react-course/src/App.css
@@ -1,2 +1,17 @@
 
 /* @import url('../node_modules/bootstrap/dist/css/bootstrap.min.css'); */
+.line-through{
+    text-decoration: line-through;
+}
+
+.inline-form-block{
+    display: flex;
+    gap:10px;
+    
+}
+.inline-form-block input{
+    flex-grow: 1;
+}
+.light-color{
+    background-color: #accbfa;
+}
